crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__double_dollar_whitespace.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"$$ \\n\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
    (
        Token(
            "$",
        ),
        1..2,
    ),
]
