crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__empty_array_plus_expr.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "(ast, errors)"
---
(
    Some(
        [
            (
                Statement(
                    (
                        VariableInit(
                            (
                                "let",
                                0..3,
                            ),
                            (
                                "b",
                                4..5,
                            ),
                            (
                                Expression(
                                    (
                                        Add(
                                            (
                                                Array(
                                                    [],
                                                ),
                                                8..10,
                                            ),
                                            (
                                                Array(
                                                    [
                                                        (
                                                            Int(
                                                                (
                                                                    4,
                                                                    14..15,
                                                                ),
                                                            ),
                                                            14..15,
                                                        ),
                                                        (
                                                            Int(
                                                                (
                                                                    5,
                                                                    17..18,
                                                                ),
                                                            ),
                                                            17..18,
                                                        ),
                                                        (
                                                            Int(
                                                                (
                                                                    6,
                                                                    20..21,
                                                                ),
                                                            ),
                                                            20..21,
                                                        ),
                                                    ],
                                                ),
                                                13..22,
                                            ),
                                        ),
                                        8..22,
                                    ),
                                ),
                                8..22,
                            ),
                        ),
                        0..22,
                    ),
                ),
                0..22,
            ),
        ],
    ),
    [],
)
