crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__empty_string.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(r#\"\"\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "\"",
        ),
        1..2,
    ),
]
