crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__just_dollar.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: "compiler.tokenize(\"$\")"
---
[
    (
        Token(
            "$",
        ),
        0..1,
    ),
]
