crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__multiple_test_blocks.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        TestBlock(
            (
                "test",
                5..9,
            ),
            Some(
                (
                    "first",
                    10..17,
                ),
            ),
            [
                (
                    VariableInit(
                        (
                            "let",
                            28..31,
                        ),
                        (
                            "a",
                            32..33,
                        ),
                        (
                            Expression(
                                (
                                    Int(
                                        (
                                            1,
                                            36..37,
                                        ),
                                    ),
                                    36..37,
                                ),
                            ),
                            36..37,
                        ),
                    ),
                    28..37,
                ),
            ],
        ),
        5..43,
    ),
    (
        TestBlock(
            (
                "test",
                49..53,
            ),
            Some(
                (
                    "second",
                    54..62,
                ),
            ),
            [
                (
                    VariableInit(
                        (
                            "let",
                            73..76,
                        ),
                        (
                            "b",
                            77..78,
                        ),
                        (
                            Expression(
                                (
                                    Int(
                                        (
                                            2,
                                            81..82,
                                        ),
                                    ),
                                    81..82,
                                ),
                            ),
                            81..82,
                        ),
                    ),
                    73..82,
                ),
            ],
        ),
        49..88,
    ),
    (
        TestBlock(
            (
                "test",
                94..98,
            ),
            None,
            [
                (
                    VariableInit(
                        (
                            "let",
                            109..112,
                        ),
                        (
                            "c",
                            113..114,
                        ),
                        (
                            Expression(
                                (
                                    Int(
                                        (
                                            3,
                                            117..118,
                                        ),
                                    ),
                                    117..118,
                                ),
                            ),
                            117..118,
                        ),
                    ),
                    109..118,
                ),
            ],
        ),
        94..124,
    ),
]
