crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__mv_files.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [],
                            (
                                "mv",
                                5..7,
                            ),
                            [
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/a",
                                                        9..15,
                                                    ),
                                                ),
                                                9..15,
                                            ),
                                        ],
                                    ),
                                    8..16,
                                ),
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/b",
                                                        19..25,
                                                    ),
                                                ),
                                                19..25,
                                            ),
                                        ],
                                    ),
                                    18..26,
                                ),
                            ],
                            [],
                        ),
                        5..27,
                    ),
                ),
                5..27,
            ),
        ),
        5..27,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [
                                (
                                    Unsafe,
                                    33..39,
                                ),
                            ],
                            (
                                "mv",
                                40..42,
                            ),
                            [
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/a",
                                                        44..50,
                                                    ),
                                                ),
                                                44..50,
                                            ),
                                        ],
                                    ),
                                    43..51,
                                ),
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/b",
                                                        54..60,
                                                    ),
                                                ),
                                                54..60,
                                            ),
                                        ],
                                    ),
                                    53..61,
                                ),
                            ],
                            [],
                        ),
                        33..62,
                    ),
                ),
                33..62,
            ),
        ),
        33..62,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        FunctionInvocation(
                            [],
                            (
                                "mv",
                                68..70,
                            ),
                            [
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/a",
                                                        73..79,
                                                    ),
                                                ),
                                                73..79,
                                            ),
                                        ],
                                    ),
                                    72..80,
                                ),
                                (
                                    Text(
                                        [
                                            (
                                                Text(
                                                    (
                                                        "/tmp/b",
                                                        83..89,
                                                    ),
                                                ),
                                                83..89,
                                            ),
                                        ],
                                    ),
                                    82..90,
                                ),
                            ],
                            [
                                (
                                    Failure(
                                        (
                                            Handle(
                                                (
                                                    "failed",
                                                    92..98,
                                                ),
                                                None,
                                                (
                                                    Block(
                                                        [],
                                                        [
                                                            (
                                                                Expression(
                                                                    (
                                                                        FunctionInvocation(
                                                                            [],
                                                                            (
                                                                                "echo",
                                                                                109..113,
                                                                            ),
                                                                            [
                                                                                (
                                                                                    Text(
                                                                                        [
                                                                                            (
                                                                                                Text(
                                                                                                    (
                                                                                                        "Error",
                                                                                                        115..120,
                                                                                                    ),
                                                                                                ),
                                                                                                115..120,
                                                                                            ),
                                                                                        ],
                                                                                    ),
                                                                                    114..121,
                                                                                ),
                                                                            ],
                                                                            [],
                                                                        ),
                                                                        109..122,
                                                                    ),
                                                                ),
                                                                109..122,
                                                            ),
                                                        ],
                                                    ),
                                                    99..128,
                                                ),
                                            ),
                                            92..128,
                                        ),
                                    ),
                                    92..128,
                                ),
                            ],
                        ),
                        68..128,
                    ),
                ),
                68..128,
            ),
        ),
        68..128,
    ),
    (
        Statement(
            (
                Block(
                    (
                        Block(
                            [
                                (
                                    Unsafe,
                                    134..140,
                                ),
                            ],
                            [
                                (
                                    Expression(
                                        (
                                            FunctionInvocation(
                                                [],
                                                (
                                                    "mv",
                                                    151..153,
                                                ),
                                                [
                                                    (
                                                        Text(
                                                            [
                                                                (
                                                                    Text(
                                                                        (
                                                                            "/tmp/a",
                                                                            156..162,
                                                                        ),
                                                                    ),
                                                                    156..162,
                                                                ),
                                                            ],
                                                        ),
                                                        155..163,
                                                    ),
                                                    (
                                                        Text(
                                                            [
                                                                (
                                                                    Text(
                                                                        (
                                                                            "/tmp/b",
                                                                            166..172,
                                                                        ),
                                                                    ),
                                                                    166..172,
                                                                ),
                                                            ],
                                                        ),
                                                        165..173,
                                                    ),
                                                ],
                                                [],
                                            ),
                                            151..174,
                                        ),
                                    ),
                                    151..174,
                                ),
                            ],
                        ),
                        134..180,
                    ),
                ),
                134..180,
            ),
        ),
        134..180,
    ),
]
