crates/server/tests/grammar/snapshots/r#mod__grammar__alpha060__pub_const_and_pub_fun.snap
---
source: crates/server/tests/grammar/alpha060.rs
expression: parse_unwrap(&tokenize(input))
---
[
    (
        PublicConstInit(
            (
                true,
                5..8,
            ),
            (
                "const",
                9..14,
            ),
            (
                "VERSION",
                15..22,
            ),
            (
                Text(
                    [
                        (
                            Text(
                                (
                                    "1.0",
                                    26..29,
                                ),
                            ),
                            26..29,
                        ),
                    ],
                ),
                25..30,
            ),
        ),
        5..30,
    ),
    (
        FunctionDefinition(
            [],
            (
                true,
                36..39,
            ),
            (
                "fun",
                40..43,
            ),
            (
                "get_version",
                44..55,
            ),
            [],
            None,
            [
                (
                    Return(
                        (
                            "return",
                            68..74,
                        ),
                        Some(
                            (
                                Var(
                                    (
                                        "VERSION",
                                        75..82,
                                    ),
                                ),
                                75..82,
                            ),
                        ),
                    ),
                    68..82,
                ),
            ],
        ),
        36..88,
    ),
]
